[package]
name = "betrayal_engine"
version = "0.1.0"
authors = ["niedzwiedzw <niedzwiedzwo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
byteorder = "1.4.3"
clap = "3.0.0-beta.2"
futures = "0.3.15"
itertools = "0.10.0"
nix = "0.20.0"
nom = "6.1.2"
parking_lot = "0.11.1"
procfs = "0.9.1"
procmaps = "0.4.1"
rayon = "1.5.1"
sled = "0.34.6"
thiserror = "1.0.24"
tokio = {version = "1.6", features = ["full"]}
