[package]
name = "betrayal_engine"
version = "0.1.1"
authors = ["niedzwiedzw <niedzwiedzwo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
byteorder = "1.4.3"
clap = { version = "3", features = ["cargo"] }
futures = "0.3.15"
itertools = "0.10.0"
nix = "0.20.0"
nom = "6.1.2"
notify = "4.0.17"
parking_lot = "0.11.1"
procfs = "0.9.1"
procmaps = "0.4.1"
rayon = "1.5.1"

serde = { version = "1.0.127", features = ["derive"] }
serde_yaml = "0.8.17"
sled = "0.34.6"
tempfile = "3.2.0"
thiserror = "1.0.24"
tokio = { version = "1.6", features = ["full"] }
indexmap = { version = "1.7.0", features = ["serde-1"] }
petgraph = { version = "0.6.0", features = ["serde-1"] }
serde_json = "1.0.66"
async-recursion = "0.3.2"
extension-traits = "2.0.0"
ordered-float = "4.5.0"

[dependencies.rhai]
version = "1.0.1"
features = ["no_float", "no_object", "no_module", "only_i64"]
