[package]
name = "betrayal_engine"
version = "0.1.3"
authors = ["niedzwiedzw <niedzwiedzwo@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
clap = { version = "3", features = ["cargo"] }
futures = "0.3.31"
itertools = "0.14.0"
nix = "0.20.0"
nom = "8.0.0"
notify = "4.0.17"
parking_lot = "0.12.3"
procfs = "0.17.0"
procmaps = "0.4.1"
rayon = "1.10.0"

serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
sled = "0.34.7"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45", features = ["full"] }
indexmap = { version = "2.9.0", features = ["serde"] }
petgraph = { version = "0.8.1", features = ["serde-1"] }
serde_json = "1.0.140"
async-recursion = "1.1.1"
extension-traits = "2.0.0"
ordered-float = "5.0.0"

[dependencies.rhai]
version = "1.21.0"
features = ["no_float", "no_object", "no_module", "only_i64"]
